--- a/public/css/mainstyle.css
+++ b/public/css/mainstyle.css
@@ -48,7 +48,7 @@ body main div.page-background.one section dl {margin: 0 auto; max-width: 1200px;
 body main div.page-background.one section dl dt {display: flex; flex-direction: row; border-right: 3px solid var(--main-text-color); width: 55%;}
 body main div.page-background.one section dl dt label {font-size: 1.2em; text-align: center; margin: auto 10px auto 0px; padding-left: 10px; width: 50%;}
 body main div.page-background.one section dl dt label strong {display: block; font-size: 2em;}
-body main div.page-background.one section dl dt image {padding: 20px 10px 10px 20px; border-radius: 25%; width: 250px; height: 250px;}
+body main div.page-background.one section dl dt img {padding: 20px 10px 10px 20px; border-radius: 25%; width: 250px; height: 250px;}
 body main div.page-background.one section dl dd {margin: auto 0 auto 20px;}
 
 body main div.page-background.two div.arrow {margin: 0; width: 80px; height: 80px; position: relative; top: -50px; left: 47%; background: white; border-radius: 50%;}
